# TIANHENG-REMOVEK8S

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  improvement_plan.md  opencode.json  setup-env.sh  start.sh  stop.sh
.codex/environments/: environment.toml
.github/workflows/: auto-merge-dev.yml  enforce-main-from-dev.yml  pr-review.yml  test.yml
docker/: Dockerfile.frontend  Dockerfile.fuzz  Dockerfile.fuzz-cpp  Dockerfile.fuzz-java  Dockerfile.gateway  Dockerfile.opencode  Dockerfile.web  requirements.web.txt  run_non_oss_fuzz.ps1
docker/nginx/: entrypoint.sh  sherpa.conf
docs/: AIXCC_MIGRATION_PLAN.md  API_REFERENCE 2.md  API_REFERENCE.md  CODEBASE_TECHNICAL_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PITFALLS.md  GBRAIN_OPTIMIZATION.md  PROJECT_HANDOFF_STATUS.md  PROMEFUZZ_MCP_TECHNICAL_SPEC.md  README.md  STANDARD_CHANGE_PROCESS.md  TECHNICAL_DEEP_DIVE.md
docs/superpowers/plans/: 2026-05-13-gbrain-memory-integration.md  2026-05-19-memory-viewer.md  2026-05-19-tianheng-frontend-redesign.md  2026-06-08-memory-management-page.md  2026-06-08-settings-drawer.md
docs/superpowers/specs/: 2026-05-13-gbrain-memory-integration-design.md  2026-05-19-memory-viewer-design.md  2026-05-19-tianheng-frontend-redesign.md  2026-05-19-tianheng-gemini-colors.md  2026-06-08-memory-management-page-design.md  2026-06-08-settings-drawer-design.md
frontend-next/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend-next/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend-next/app/memory/: page.tsx
frontend-next/components/: ConfigPanel.tsx  LogPanel.tsx  MemoryDetail.tsx  MemoryDrawer.tsx  MemoryEditForm.tsx  MemoryPageDrawer.tsx  MemoryResultsList.tsx  MemorySearchBar.tsx  MemoryStatsBar.tsx  MemoryTable.tsx  MemoryToolBar.tsx  MemoryTypeTabs.tsx  SessionPanel.tsx  SettingsDrawer.tsx  SystemOverviewCard.tsx  TaskProgressPanel.tsx  logUtils.test.ts  logUtils.ts
frontend-next/lib/api/: client.test.ts  client.ts  hooks.ts  schemas.ts
frontend-next/store/: useUiStore.ts
gbrain/: AGENTS.md  CLAUDE.md  GBRAIN_PROJECT_INTRODUCTION.md  README.md  README_zh.md
gbrain/benchmarks/gbrain-vs-gitnexus/: run_benchmark.sh
gbrain/docs/: GBRAIN_WORKFLOW.md
gbrain/docs/mcp/: OPENCODE.md
gbrain/docs/plans/: code-content-storage-query.md
gbrain/src/: cli.ts  schema.sql
gbrain/src/commands/: analyze-repo.ts  code.ts  import.ts  sync.ts
gbrain/src/core/: embedding.ts  import-file.ts  (+9 more)
gbrain/test/: code-command.test.ts  import-code.test.ts  intent.test.ts  link-extraction.test.ts  pglite-engine.test.ts  sync.test.ts
harness_generator/: README.md  setup-env.sh
harness_generator/docs/: TECHNICAL_HANDOFF_ZH.md  opencode_stability_plan.md
harness_generator/src/: __init__.py  codex_helper.py  fuzz_unharnessed_repo.py  harness_generator.py  requirements.txt  test.py
promefuzz-mcp/: DEPLOY.md  README.md  config.template.toml  prompts.py  pyproject.toml  run_mcp.sh
promefuzz-mcp/processor/cxx/: CMakeLists.txt  README.md  processor.hh  setup.sh
promefuzz-mcp/promefuzz_mcp/: __init__.py  build.py  config.py  server.py  server_tools.py
promefuzz-mcp/promefuzz_mcp/comprehender/: __init__.py  func_relevance.py  func_usage.py  knowledge.py  purpose.py
promefuzz-mcp/promefuzz_mcp/llm/: __init__.py  client.py
promefuzz-mcp/promefuzz_mcp/preprocessor/: __init__.py  api_extractor.py  ast.py  callgraph.py  complexity.py  incidental.py  relevance.py
promefuzz-mcp/promefuzz_mcp/types/: __init__.py  api_types.py  knowledge_types.py
promefuzz-mcp/promefuzz_mcp/utils/: __init__.py
scripts/: parse-task.ps1  start.sh  stop.sh
tests/: test_api_stability.py  test_codex_helper_build.py  test_codex_helper_sentinel.py  test_cors_headers.py  test_dockerize_path_translation.py  test_execution_plan_quality_contracts.py  test_fuzz_effectiveness_summary.py  test_job_log_isolation.py  test_job_store_persistence.py  test_memory_api.py  test_memory_schemas.py  test_memory_slug_resolver.py  test_non_root_static_contracts.py  test_opencode_skill_contracts.py  test_opencode_stability_guards.py  test_persistent_config_runtime_paths.py  test_promefuzz_ast_preprocessor_resilience.py  test_promefuzz_mcp_rag.py  test_promefuzz_mcp_semantic.py  test_promefuzz_placeholder_contracts.py  test_promefuzz_server_code_nav_tools.py  test_prompt_template_loading.py  test_run_cmd_streaming.py  test_seed_archive_policy.py  test_seed_target_quality.py  test_system_metrics_memory.py  test_workflow_antlr_context.py  test_workflow_build_resilience.py  test_workflow_common_budget.py  test_workflow_context_store.py  test_workflow_field_forwarding_contract.py  test_workflow_prompt_render_safe.py  test_workflow_run_detection.py  test_workflow_stage_skill_binding.py
(+189 files in other folders)
