[project]
name = "promefuzz-mcp"
version = "0.1.0"
description = "PromeFuzz MCP Tools - Code Analysis and Comprehension via LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PromeFuzz Team", email = "promefuzz@example.com"}
]
keywords = ["fuzzing", "mcp", "llm", "code-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.2.0",
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "tomli>=2.0.0",
    "click>=8.1.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
]

[project.scripts]
promefuzz-mcp = "promefuzz_mcp.server:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["promefuzz_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
